[gd_scene load_steps=14 format=2]

[ext_resource path="res://title_screen/buttons/facmode/Easy.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/buttons/facmode/normal.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/buttons/facmode/hard.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/fonts/ARCADECLASSIC.TTF" type="FontFile" id=4]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/BG-sky.png" type="Texture2D" id=5]
[ext_resource path="res://Menufac.gd" type="Script" id=6]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/MG-kilometer sign.png" type="Texture2D" id=7]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/MG-fire.png" type="Texture2D" id=8]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/MG-wheels.png" type="Texture2D" id=9]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/MG-giant sign.png" type="Texture2D" id=10]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/BG-factory.png" type="Texture2D" id=11]
[ext_resource path="res://title_screen/back.tscn" type="PackedScene" id=12]

[sub_resource type="FontFile" id=1]
size = 157
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="BG-sky" type="Sprite2D" parent="."]
position = Vector2( 3755.09, 461.724 )
texture = ExtResource( 5 )

[node name="MG-wheels" type="Sprite2D" parent="BG-sky"]
position = Vector2( -3551.96, 7.79486 )
texture = ExtResource( 9 )

[node name="MG-fire" type="Sprite2D" parent="BG-sky"]
position = Vector2( -2914.44, -87.9591 )
texture = ExtResource( 8 )

[node name="MG-giant sign" type="Sprite2D" parent="BG-sky"]
position = Vector2( -3501.56, -231.59 )
texture = ExtResource( 10 )

[node name="BG-factory" type="Sprite2D" parent="."]
position = Vector2( 1755.53, 296.612 )
texture = ExtResource( 11 )

[node name="Button" parent="." instance=ExtResource( 1 )]
offset_left = 388.42
offset_top = 200.878
offset_right = 680.42
offset_bottom = 279.878

[node name="Button2" parent="." instance=ExtResource( 2 )]
offset_left = 365.971
offset_top = 295.441
offset_right = 657.971
offset_bottom = 374.441

[node name="MG-kilometer sign" type="Sprite2D" parent="Button2"]
position = Vector2( 263.01, 156.439 )
texture = ExtResource( 7 )

[node name="Button3" parent="." instance=ExtResource( 3 )]
offset_left = 395.155
offset_top = 380.473
offset_right = 687.155
offset_bottom = 459.473

[node name="Label" type="Label" parent="."]
offset_left = 64.8439
offset_top = 45.8653
offset_right = 1242.84
offset_bottom = 205.865
scale = Vector2( 0.75, 0.75 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
text = "Escape war zone "
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="back" parent="." instance=ExtResource( 12 )]
offset_left = 923.769
offset_top = 550.375
offset_right = 1099.77
offset_bottom = 629.375
scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
